--- a/faq.pug
+++ b/faq.pug
@@ -3,7 +3,7 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   link(rel='stylesheet' type='text/css' href='src/css/faq.css')
-  title  &Kcy;&acy;&rcy;&shcy;&iecy;&rcy;&icy;&ncy;&gcy; SkillFactory
+  title  &Kcy;&acy;&rcy;&shcy;&iecy;&rcy;&icy;&ncy;&gcy; SFDrive
 header.main-header
   .main-navigation-wrapper
     .container-header
