--- a/index.pug
+++ b/index.pug
@@ -3,9 +3,9 @@ doctype html
 head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  link(rel='stylesheet' href='../SFDrive-main/dist/main.css')
+  link(rel='stylesheet' href='../dist/main.css')
   link(rel='stylesheet' type='text/css' href='src/css/index.css')
-  title  &Kcy;&acy;&rcy;&shcy;&iecy;&rcy;&icy;&ncy;&gcy; SkillFactory
+  title  &Kcy;&acy;&rcy;&shcy;&iecy;&rcy;&icy;&ncy;&gcy; SFDrive
 header.main-header
   .main-navigation-wrapper
     .container-header
